<resources>
    <string name="app_name">骑车帮</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="my_position">我的位置</string>
    <string name="actual_info">实时导航信息</string>
    <string name="exist">退出</string>
    <string name="about">关于</string>
    <string name="forum">驴友圈</string>
    <string name="favorite">收藏</string>
    <string name="msg">应急短信</string>
    <string name="others">其它</string>


    <string name="title_activity_login">登录</string>
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">不能为空</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="welcome3">让你的旅行更安全</string>
    <string name="welcome1">身体和心灵总有一个有要</string>
    <string name="welcome2">在路上</string>
    <string name="other_info">copyright @ 2017 CycleNavi</string>
    <string name="register">还未注册账号？</string>
    <string name="register_user">注册</string>
    <string name="re_password">再次输入密码</string>
    <string name="input_phone">应急电话</string>
    <string name="network_wrong">网络异常</string>
    <string name="server_error">服务器异常</string>
    <string name="register_ok">注册成功</string>
    <string name="logout">注销</string>
    <string name="choosePath">选择路径</string>
    <string name="phonenum_wrong">请填写有效电话号码</string>
    <string name="without_login">未登录</string>
    <string name="logout_message">确认要注销当前账户吗？</string>
    <string name="ok">确认</string>
    <string name="no">手滑了</string>
    <string name="search_position">搜索地点</string>
    <string name="search">Search your destination</string>
    <string name="start">开始</string>
    <string name="history">History</string>
    <string name="result">Result</string>
    <string name="rout">路线</string>
    <string name="startNavi">开始导航</string>
    <string name="conform">确认要退出吗？</string>
    <string name="title_activity_first">FirstActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty">还没有评论\n想抢个沙发吧</string>
</resources>
