<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/my_position"
            android:icon="@drawable/position"
            android:title="@string/my_position" />
        <item
            android:id="@+id/msg"
            android:icon="@drawable/msg"
            android:title="@string/msg" />
        <item
            android:id="@+id/favorite"
            android:icon="@drawable/favorite"
            android:title="@string/favorite" />
        <item
            android:id="@+id/forum"
            android:icon="@drawable/forum"
            android:title="@string/forum" />
    </group>

    <item
        android:title="@string/others">
        <menu>
            <item
                android:id="@+id/about"
                android:icon="@drawable/about"
                android:title="@string/about" />
            <item
                android:id="@+id/exist"
                android:icon="@drawable/exist"
                android:title="@string/exist" />
        </menu>
    </item>

</menu>
