<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ImageView
        android:scaleType="centerCrop"
        android:background="@drawable/wallpaper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    <LinearLayout
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/welcome1"
            android:layout_marginTop="135dp"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:text="@string/welcome1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="10dp"

            android:layout_gravity="right"
            android:textSize="23sp"
            android:textColor="@android:color/white"
            android:text="@string/welcome2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <TextView
        android:layout_marginRight="55dp"
        android:layout_alignParentRight="true"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:text="@string/welcome3"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_marginBottom="100dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/logo_white"
            android:layout_width="35dp"
            android:layout_height="35dp"
            />
        <TextView
            android:layout_gravity="bottom"
            android:layout_marginLeft="8dp"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:textSize="12sp"
        android:layout_marginBottom="48dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textColor="@android:color/white"
        android:text="@string/other_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
