<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nexuslink.cyclenavi.View.Impl.Activities.SearchActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="73dp">
        <android.support.v7.widget.CardView
            android:clipToPadding="true"
            android:fitsSystemWindows="true"
            app:cardCornerRadius="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">
            <LinearLayout
                android:fitsSystemWindows="true"
                android:clipToPadding="true"
                android:layout_marginLeft="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_marginLeft="8dp"
                    android:id="@+id/left_back"
                    android:src="@drawable/back_gray"
                    android:layout_width="26dp"
                    android:layout_height="26dp" />
                <LinearLayout
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <EditText
                        android:gravity="center_vertical"
                        android:id="@+id/search_edit"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:hint="@string/search"
                        android:fitsSystemWindows="true"
                        android:clipToPadding="true"
                        android:background="@null"
                        android:layout_width="0dp"
                        android:layout_height="match_parent" />
                    <!--<ImageView
                        android:id="@+id/search_image"
                        android:layout_marginRight="8dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/search"
                        android:layout_width="20dp"
                        android:layout_height="20dp" />-->
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_below="@id/appbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="8dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/text_history"
                android:textSize="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.CardView
                android:layout_margin="4dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                android:id="@+id/card_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.RecyclerView
                    android:clipToPadding="true"
                    android:id="@+id/recycle_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </android.support.v7.widget.RecyclerView>
            </android.support.v7.widget.CardView>
            <TextView
                android:visibility="gone"
                android:id="@+id/text_result"
                android:textSize="16dp"
                android:layout_margin="16dp"
                android:text="@string/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.CardView
                android:layout_margin="4dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                android:id="@+id/card_result"
                android:visibility="gone"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycle_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </android.support.v7.widget.RecyclerView>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
